# Vigil

./: .editorconfig  .gitignore  .golangci.yaml  .impeccable.md  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security-scan.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
cmd/vigil-sidecar/: main.go
db/: ent_client.go  test_util.go
db/ent/: appconfig.go  appconfig_create.go  appconfig_delete.go  appconfig_query.go  appconfig_update.go  client.go  ent.go  generate.go  mutation.go  outage.go  outage_create.go  outage_delete.go  outage_query.go  outage_update.go  runtime.go  sample.go  sample1h.go  sample1h_create.go  sample1h_delete.go  sample1h_query.go  sample1h_update.go  sample1min.go  sample1min_create.go  sample1min_delete.go  sample1min_query.go  sample1min_update.go  sample5min.go  sample5min_create.go  sample5min_delete.go  sample5min_query.go  sample5min_update.go  sample_create.go  sample_delete.go  sample_query.go  sample_update.go  target.go  target_create.go  target_delete.go  target_query.go  target_update.go  (+6 more)
internal/aggregator/: aggregator.go  aggregator_test.go  buckets.go  buckets_test.go
internal/app/: app.go
internal/constants/: constants.go
internal/ipc/: handlers.go  handlers_config.go  handlers_outages.go  handlers_reports.go  handlers_reports_test.go  handlers_samples.go  handlers_samples_test.go  handlers_targets.go  handlers_test.go  handlers_wifi.go  messages.go  server.go
internal/monitor/: buffer.go  buffer_test.go  flusher.go  monitor.go  monitor_test.go
internal/netinfo/: gateway.go  wifi.go  wifi_darwin.go  wifi_linux.go  wifi_other.go  wifi_windows.go
internal/outages/: detector.go  detector_test.go
internal/probes/: defaults.go  dial.go  factory.go  factory_test.go  icmp.go  probe.go  tcp.go  tcp_test.go  udp_dns.go  udp_stun.go
internal/reports/: csv.go  generator.go  html.go  report.go
internal/retention/: pruner.go
internal/runloop/: runloop.go
internal/stats/: stats.go  stats_test.go
internal/storage/: aggregated.go  client.go  config.go  outages.go  samples.go  seed.go  storage_test.go  store.go  targets.go  wifi.go
pkg/buildinfo/: buildinfo.go
pkg/errors/: errors.go  go113.go  structured.go
scripts/: build-sidecar.sh  generate-updater-keys.sh  lipo-darwin.sh
tests/: conftest.py  test_probes.py  test_stats.py
(+90 files in other folders)
