[package]
name = "vigil-desktop"
version = "0.0.5"
edition = "2021"

[lib]
name = "vigil_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "process", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
